Refactor walk command to use velocity and add FRONT direction, remove unused Vector3i imports and methods